--- a/DockerFile
+++ b/DockerFile
@@ -1,17 +1,22 @@
 # Use official Python image
 FROM python:3.11-slim
 
+# Set environment variables
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+
+# Set working directory
 WORKDIR /app
 
 # Install dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the app
+# Copy app source code
 COPY . .
 
-# Expose port 8080
+# Expose port
 EXPOSE 8080
 
-# Command to run FastAPI app
+# Command to run the app
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
