--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi>=0.116.1",
+    "google-cloud-secret-manager>=2.24.0",
     "langchain>=0.3.27",
     "langchain-google-genai>=2.1.10",
     "pymupdf>=1.26.4",
